023 modified gradle configuration so that test written with JUNIT 5 actually work