@@ -12,7 +12,6 @@ subprojects {
 
     dependencies {
         compile project(':chapter04')
-        testRuntime testing.launcher, testing.jupiter, testing.vintage
     }
 
     afterEvaluate {
@@ -26,33 +25,6 @@ subprojects {
                 options.compilerArgs = [
                         '-proc:none',
                         '--module-path', classpath.asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '-proc:none',
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'org.junit.jupiter.engine',
-                        '--add-reads', "$moduleName=org.junit.jupiter.engine",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        test {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
                 ]
                 classpath = files()
             }
