@@ -6,13 +6,13 @@ buildscript {
 
 subprojects {
     group 'com.apress.bgn.ch9'
-
     apply plugin: 'java'
     apply plugin: 'idea'
 
+
     dependencies {
         compile misc.slf4j, misc.logback
-        testRuntime testing.launcher, testing.jupiter, testing.vintage
+        testRuntime testing.launcher, testing.jupiter
     }
 
     tasks.withType(Javadoc) {
@@ -44,31 +44,5 @@ subprojects {
             }
         }
 
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '-proc:none',
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'org.junit.jupiter.engine',
-                        '--add-reads', "$moduleName=org.junit.jupiter.engine",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        test {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                ]
-                classpath = files()
-            }
-        }
     }
 }
